--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(expression)
 add_subdirectory(transform)
 add_subdirectory(cl)
 add_subdirectory(parse)
+add_subdirectory(serialize)
