Preliminary CLI interface to process boole to qcir

--- a/src/serialize/CMakeLists.txt
+++ b/src/serialize/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(booleguru-serialize STATIC ${SRCS})
 
 target_include_directories(booleguru-serialize PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(booleguru-serialize PUBLIC booleguru-expression)
+target_link_libraries(booleguru-serialize PUBLIC booleguru-expression booleguru-transform)
 
 if(TARGET Catch2::Catch2)
   add_subdirectory(test)
