Add CLI test that requires throwing no_input_file

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -1,16 +1,21 @@
 set(SRCS
-  src/main.cpp
   src/argument.cpp
   src/input_file.cpp
   src/cli-processor.cpp
 )
 
-add_executable(booleguru ${SRCS})
+add_library(booleguru-cli ${SRCS})
+target_include_directories(booleguru-cli PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(booleguru-cli PUBLIC booleguru-expression booleguru-cl booleguru-parse booleguru-transform booleguru-serialize)
 
-target_include_directories(booleguru PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-target_link_libraries(booleguru PUBLIC booleguru-expression booleguru-cl booleguru-parse booleguru-transform booleguru-serialize)
+add_executable(booleguru ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
+target_link_libraries(booleguru PUBLIC booleguru-cli)
 
 if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+  target_link_libraries(booleguru-cli PRIVATE -fsanitize=address)
   target_link_libraries(booleguru PRIVATE -fsanitize=address)
+endif()
+
+if(TARGET Catch2::Catch2)
+  add_subdirectory(test)
 endif()
