Fix and test and_inside

--- a/src/expression/CMakeLists.txt
+++ b/src/expression/CMakeLists.txt
@@ -8,3 +8,7 @@ set(SRCS
 add_library(booleguru-expression STATIC ${SRCS})
 
 target_include_directories(booleguru-expression PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+if(TARGET Catch2::Catch2)
+  add_subdirectory(test)
+endif()
