--- a/src/serialize/test/CMakeLists.txt
+++ b/src/serialize/test/CMakeLists.txt
@@ -5,6 +5,6 @@ set(TEST_SRCS
 add_executable(booleguru-serialize-test ${TEST_SRCS})
 
 target_link_libraries(booleguru-serialize-test PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(booleguru-serialize-test PRIVATE booleguru-serialize)
+target_link_libraries(booleguru-serialize-test PRIVATE $<TARGET_OBJECTS:booleguru-serialize>)
 
 catch_discover_tests(booleguru-serialize-test)
