Revert "Several more experiments, but this went nowhere"
This reverts commit 0692349f1937b8bc579431c8730010ce0e302c2c.

--- a/src/cl/CMakeLists.txt
+++ b/src/cl/CMakeLists.txt
@@ -4,6 +4,11 @@ set(SRCS
   src/cl-globals.cpp
 )
 
+add_library(booleguru-cl-wrapper STATIC
+  src/cl-function-c-wrappers.cpp
+)
+target_include_directories(booleguru-cl-wrapper PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(booleguru-cl-wrapper PUBLIC booleguru-expression booleguru-transform booleguru-util)
 
 set(LISP_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/lisp/booleguru-cl-lisp.asd
@@ -11,9 +16,6 @@ set(LISP_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/lisp/booleguru-cl-lisp.lisp
   ${CMAKE_CURRENT_SOURCE_DIR}/lisp/booleguru-smtlib-parser.lisp
 )
-
-add_library(booleguru-cl-wrapper STATIC $<TARGET_OBJECTS:booleguru-expression> $<TARGET_OBJECTS:booleguru-transform> src/cl-function-c-wrappers.cpp)
-target_include_directories(booleguru-cl-wrapper PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_library(booleguru-cl STATIC ${SRCS})
 target_include_directories(booleguru-cl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -36,7 +38,7 @@ add_custom_command(
   DEPENDS ${LISP_SRCS} booleguru-cl-wrapper
   OUTPUT booleguru-cl-lisp--all-systems.a init-wrapper.h
   COMMAND ${ECL_BIN_PATH} --eval "(require 'asdf)"
-    --eval "(setq compiler:*user-ld-flags* \"-fsanitize=address -lstdc++ -L${CMAKE_BINARY_DIR}/lib/\")"
+    --eval "(setq compiler:*user-ld-flags* \"-lstdc++ -L${CMAKE_BINARY_DIR}/lib/\")"
     --eval "(setq compiler:*cc* \"${CMAKE_C_COMPILER} ${ECL_INCLUDES}\")"
     --eval "(push \"${CMAKE_CURRENT_SOURCE_DIR}/lisp/\" asdf:*central-registry*)"
     --eval "(asdf:make-build :booleguru-cl-lisp :prologue-code '(require :asdf) :type :static-library :monolithic t :init-name \"init_lib__BOOLEGURU_CL\" :move-here \"${CMAKE_CURRENT_BINARY_DIR}\")"
