--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,11 @@ if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
 	target_compile_options(booleguru-expression PRIVATE /W4 /WX)
 	target_compile_options(booleguru-transform PRIVATE /W4 /WX)
   else()
-	target_compile_options(booleguru-expression PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer)
-	target_compile_options(booleguru-transform PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer)
-	target_compile_options(booleguru-parse PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer)
-	target_compile_options(booleguru-cl PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer)
-	target_compile_options(booleguru-serialize PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer)
-	target_compile_options(booleguru PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer)
+	target_compile_options(booleguru-expression PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
+	target_compile_options(booleguru-transform PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
+	target_compile_options(booleguru-parse PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
+	target_compile_options(booleguru-cl PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
+	target_compile_options(booleguru-serialize PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
+	target_compile_options(booleguru PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
   endif()
 endif()
