--- a/src/expression/CMakeLists.txt
+++ b/src/expression/CMakeLists.txt
@@ -5,9 +5,7 @@ set(SRCS
   src/script_manager.cpp
 )
 
-add_library(booleguru-expression OBJECT ${SRCS})
-
-set_property(TARGET booleguru-expression PROPERTY POSITION_INDEPENDENT_CODE ON)
+add_library(booleguru-expression STATIC ${SRCS})
 
 target_include_directories(booleguru-expression PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
