Add Support for Booleguru on the Web through an Emscripten Build Process
Relies on a fitting build container: https://gitlab.sai.jku.at/booleguru/builder

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,4 +6,10 @@ add_subdirectory(cl)
 add_subdirectory(parse)
 add_subdirectory(serialize)
 
-add_subdirectory(cli)
+if(NOT EMSCRIPTEN)
+  add_subdirectory(cli)
+endif()
+
+if(EMSCRIPTEN)
+  add_subdirectory(js-api)
+endif()
