--- a/src/cl/CMakeLists.txt
+++ b/src/cl/CMakeLists.txt
@@ -12,9 +12,7 @@ target_link_libraries(booleguru-cl-wrapper PUBLIC booleguru-expression booleguru
 
 set(LISP_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/lisp/booleguru-cl-lisp.asd
-  ${CMAKE_CURRENT_SOURCE_DIR}/lisp/booleguru-wrapper.lisp
   ${CMAKE_CURRENT_SOURCE_DIR}/lisp/booleguru-cl-lisp.lisp
-  ${CMAKE_CURRENT_SOURCE_DIR}/lisp/booleguru-smtlib-parser.lisp
 )
 
 add_library(booleguru-cl STATIC ${SRCS})
@@ -25,6 +23,10 @@ target_include_directories(booleguru-cl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inclu
 # query the symbols and are done with it. This way seems to work well. We have
 # to report this upstream though.
 
+if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+  set(SANITIZER_FLAGS "-fsanitize=address -fsanitize=undefined")
+endif()
+
 # Add include directories from expression.
 get_target_property(BOOLEGURU_EXPRESSION_INCLUDES booleguru-expression INCLUDE_DIRECTORIES)
 get_target_property(BOOLEGURU_EXPRESSION_INCLUDES booleguru-cl INCLUDE_DIRECTORIES)
@@ -33,6 +35,22 @@ foreach(dir ${BOOLEGURU_EXPRESSION_INCLUDES})
   string(APPEND ECL_INCLUDES "-I${dir} ")
 endforeach()
 
+set(FAS_COMMAND1 --eval "(asdf:make-build :booleguru-cl-lisp :prologue-code '(require :asdf) :type :fasb :monolithic t :init-name \"init_lib__BOOLEGURU_CL\" :move-here \"${CMAKE_CURRENT_BINARY_DIR}\")")
+set(FAS_COMMAND2 ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/booleguru-cl-lisp--all-systems.fasb ${CMAKE_BINARY_DIR}/booleguru-cl.fasb)
+set(LD_COMMAND
+  --eval "(setq compiler:*user-ld-flags* \"${SANITIZER_FLAGS} -lstdc++ -L${CMAKE_BINARY_DIR}/lib/ -lbooleguru-cl-wrapper -lbooleguru-transform -lbooleguru-expression\")")
+
+if(EMSCRIPTEN)
+  message(STATUS "Building on Emscripten, adapting the call to ECL.")
+  set(FAS_COMMAND1 "")
+  set(FAS_COMMAND2 "true")
+  set(LD_COMMAND
+    --eval "(setq compiler:*user-linker-flags* \"-lstdc++ -L${CMAKE_BINARY_DIR}/lib/ -lbooleguru-cl-wrapper -lbooleguru-transform -lbooleguru-expression -s ALLOW_MEMORY_GROWTH=1 -s TOTAL_MEMORY=2000MB\")"
+    --eval "(setq compiler:*ld* \"${CMAKE_C_COMPILER}\")")
+endif()
+
+message(STATUS "Using C compiler for compiling (ECL) C-ified common lisp code: ${CMAKE_C_COMPILER}")
+
 # The cut removes the mangled C++ name. The ASAN-verification modidifer is to
 # ease the use of ASAN. Not perfect, should be changed to a preload, but is
 # enough for this third party library stuff.
@@ -40,14 +58,15 @@ add_custom_command(
   DEPENDS ${LISP_SRCS} booleguru-cl-wrapper
   OUTPUT booleguru-cl-lisp--all-systems.a init-wrapper.h
   COMMAND ${CMAKE_COMMAND} -E env ASAN_OPTIONS=verify_asan_link_order=0 ${ECL_BIN_PATH} --eval "(require 'asdf)"
-    --eval "(setq compiler:*user-ld-flags* \"-fsanitize=address -fsanitize=undefined -lstdc++ -L${CMAKE_BINARY_DIR}/lib/ -lbooleguru-cl-wrapper -lbooleguru-transform -lbooleguru-expression\")"
-    --eval "(setq compiler:*cc* \"${CMAKE_C_COMPILER} -fsanitize=address -fsanitize=undefined ${ECL_INCLUDES}\")"
+    --eval "(setq compiler:*cc* \"${CMAKE_C_COMPILER}\")"
+    --eval "(setq compiler:*user-cc-flags* \"${SANITIZER_FLAGS} ${ECL_INCLUDES}\")"
+    ${LD_COMMAND}
     --eval "(push \"${CMAKE_CURRENT_SOURCE_DIR}/lisp/\" asdf:*central-registry*)"
     --eval "(asdf:make-build :booleguru-cl-lisp :prologue-code '(require :asdf) :type :static-library :monolithic t :init-name \"init_lib__BOOLEGURU_CL\" :move-here \"${CMAKE_CURRENT_BINARY_DIR}\")"
-    --eval "(asdf:make-build :booleguru-cl-lisp :prologue-code '(require :asdf) :type :fasb :monolithic t :init-name \"init_lib__BOOLEGURU_CL\" :move-here \"${CMAKE_CURRENT_BINARY_DIR}\")"
+    ${FAS_COMMAND1}
     --eval "(quit)"
   COMMAND bash -c "printf \"#pragma once\\n #define ECL_INIT_LIB_FUNC $(strings booleguru-cl-lisp--all-systems.a | grep --max-count=1 \"^init_lib\")\\n\" > init-wrapper.h"
-  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/booleguru-cl-lisp--all-systems.fasb ${CMAKE_BINARY_DIR}/booleguru-cl.fasb
+  COMMAND ${FAS_COMMAND2}
   VERBATIM
   COMMENT "Run ECL (Embeddable Common Lisp) to compile lispy dependencies")
 # This goes in pair with `add_custom_command` above.
