--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,5 +41,6 @@ if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
 	target_compile_options(booleguru-cl PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
 	target_compile_options(booleguru-serialize PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
 	target_compile_options(booleguru PRIVATE -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer -fsanitize=address -fsanitize=undefined)
+	target_link_options(booleguru PRIVATE -fsanitize=address -fsanitize=undefined)
   endif()
 endif()
