--- a/src/transform/CMakeLists.txt
+++ b/src/transform/CMakeLists.txt
@@ -15,3 +15,11 @@ add_library(booleguru-transform STATIC ${SRCS})
 target_include_directories(booleguru-transform PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_link_libraries(booleguru-transform PUBLIC booleguru-expression)
+
+if(TARGET Catch2::Catch2)
+  add_subdirectory(test)
+endif()
+
+if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+  target_link_libraries(booleguru-transform PRIVATE -fsanitize=address)
+endif()
