--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-project(booleguru)
+cmake_policy(SET CMP0048 NEW)
+project(booleguru
+  VERSION 0.2)
 cmake_minimum_required(VERSION 3.9)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -59,6 +61,7 @@ if(EMSCRIPTEN)
   add_link_options("-s ALLOW_MEMORY_GROWTH=1 -s TOTAL_MEMORY=2000MB")
 endif()
 
+add_subdirectory(third_party)
 add_subdirectory(src)
 
 if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
