--- a/src/transform/CMakeLists.txt
+++ b/src/transform/CMakeLists.txt
@@ -20,6 +20,6 @@ if(TARGET Catch2::Catch2)
   add_subdirectory(test)
 endif()
 
-if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+if(${CMAKE_BUILD_TYPE} MATCHES "Sanitize")
   target_link_libraries(booleguru-transform PRIVATE -fsanitize=address)
 endif()
