--- a/src/transform/CMakeLists.txt
+++ b/src/transform/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(booleguru-transform STATIC ${SRCS})
 
 target_include_directories(booleguru-transform PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(booleguru-transform PUBLIC booleguru-expression)
+target_link_libraries(booleguru-transform PUBLIC booleguru-expression booleguru-util)
 
 if(TARGET Catch2::Catch2)
   add_subdirectory(test)
