--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SRCS
 
 add_library(booleguru-cli ${SRCS})
 target_include_directories(booleguru-cli PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(booleguru-cli PUBLIC booleguru-expression booleguru-cl booleguru-parse booleguru-transform booleguru-serialize)
+target_link_libraries(booleguru-cli PUBLIC booleguru-expression booleguru-cl booleguru-parse booleguru-transform booleguru-serialize booleguru-lua)
 
 add_executable(booleguru ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 target_link_libraries(booleguru PUBLIC booleguru-cli)
