--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_policy(SET CMP0048 NEW)
+cmake_policy(SET CMP0079 NEW)
 project(booleguru
   VERSION 0.2)
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.13)
 
 set(CMAKE_CXX_STANDARD 20)
 
