Add fennel types, based on old lua code from Booleform

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(util)
 
 add_subdirectory(expression)
 add_subdirectory(transform)
+add_subdirectory(solve)
 add_subdirectory(lua)
 add_subdirectory(parse)
 add_subdirectory(serialize)
