--- a/src/serialize/CMakeLists.txt
+++ b/src/serialize/CMakeLists.txt
@@ -12,6 +12,6 @@ if(TARGET Catch2::Catch2)
   add_subdirectory(test)
 endif()
 
-if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+if(${CMAKE_BUILD_TYPE} MATCHES "Sanitize")
   target_link_libraries(booleguru-serialize PRIVATE -fsanitize=address)
 endif()
