Successfully parse simple boolean grammar using ANTLR

--- a/src/parse/test/CMakeLists.txt
+++ b/src/parse/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(TEST_SRCS
   test-parse-boole.cpp
   test-sexp-tracker.cpp
+  test-antlr-boole-parse.cpp
 )
 
 add_executable(booleguru-parse-test ${TEST_SRCS})
@@ -8,5 +9,9 @@ add_executable(booleguru-parse-test ${TEST_SRCS})
 target_link_libraries(booleguru-parse-test PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(booleguru-parse-test PRIVATE booleguru-parse)
 target_link_libraries(booleguru-parse-test PRIVATE antlr4_static)
+
+target_include_directories(booleguru-parse-test PRIVATE SYSTEM ${ANTLR_boole_lexer_OUTPUT_DIR})
+target_include_directories(booleguru-parse-test PRIVATE SYSTEM ${ANTLR_boole_parser_OUTPUT_DIR})
+target_include_directories(booleguru-parse-test PRIVATE SYSTEM ${ANTLR4_INCLUDE_DIR})
 
 catch_discover_tests(booleguru-parse-test)
