Trying to get ANTLR and lisp to work

--- a/src/parse/CMakeLists.txt
+++ b/src/parse/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(booleguru-parse-antlr OBJECT
 )
 
 target_link_libraries(booleguru-parse-antlr PUBLIC antlr4_static)
-target_link_libraries(booleguru-parse-antlr PUBLIC booleguru-expression)
+target_link_libraries(booleguru-parse-antlr PUBLIC booleguru-expression booleguru-lua)
 target_include_directories(booleguru-parse-antlr PUBLIC ${ANTLR4_INCLUDE_DIR})
 
 set(SRCS
