--- a/src/js-api/CMakeLists.txt
+++ b/src/js-api/CMakeLists.txt
@@ -3,7 +3,6 @@ set(SRCS
 
 add_executable(booleguru ${SRCS})
 
-set_target_properties(booleguru PROPERTIES LINK_FLAGS "--bind -s -O3 -sASSERTIONS -s INITIAL_MEMORY=134217728 -sALLOW_MEMORY_GROWTH -sASYNCIFY -s ASYNCIFY_STACK_SIZE=6000000")
+set_target_properties(booleguru PROPERTIES LINK_FLAGS "-O3 -fwasm-exceptions -s INITIAL_MEMORY=134217728 -sALLOW_MEMORY_GROWTH -SMODULARIZE -s 'EXPORT_NAME=\"createBooleguruModule\"'")
 
 target_link_libraries(booleguru PUBLIC booleguru-parse booleguru-serialize booleguru-transform)
-
