--- a/src/js-api/CMakeLists.txt
+++ b/src/js-api/CMakeLists.txt
@@ -3,6 +3,6 @@ set(SRCS
 
 add_executable(booleguru ${SRCS})
 
-set_target_properties(booleguru PROPERTIES LINK_FLAGS "--bind -O3 -fwasm-exceptions -s INITIAL_MEMORY=134217728 -sALLOW_MEMORY_GROWTH -SMODULARIZE -s 'EXPORT_NAME=\"createBooleguruModule\"'")
+set_target_properties(booleguru PROPERTIES LINK_FLAGS "--bind -O3 -fwasm-exceptions -s INITIAL_MEMORY=134217728 -sALLOW_MEMORY_GROWTH -sMODULARIZE -s 'EXPORT_NAME=\"createBooleguruModule\"'")
 
 target_link_libraries(booleguru PUBLIC booleguru-parse booleguru-serialize booleguru-transform)
