--- a/src/transform/test/CMakeLists.txt
+++ b/src/transform/test/CMakeLists.txt
@@ -8,6 +8,6 @@ set(TEST_SRCS
 add_executable(booleguru-transform-test ${TEST_SRCS})
 
 target_link_libraries(booleguru-transform-test PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(booleguru-transform-test PRIVATE booleguru-transform)
+target_link_libraries(booleguru-transform-test PRIVATE booleguru-transform booleguru-parse)
 
 catch_discover_tests(booleguru-transform-test)
