Implement and test quantvec mask_leaves

--- a/src/expression/test/CMakeLists.txt
+++ b/src/expression/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(TEST_SRCS
   test-expression-and-inside.cpp
   test-user-defined-literals.cpp
+  test-quantvec.cpp
 )
 
 add_executable(booleguru-expression-test ${TEST_SRCS})
@@ -10,6 +11,6 @@ target_link_libraries(booleguru-expression-test PRIVATE booleguru-expression)
 
 catch_discover_tests(booleguru-expression-test)
 
-if(${CMAKE_BUILD_TYPE} MATCHES "Sanitize")
+if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
   target_link_libraries(booleguru-expression-test PRIVATE -fsanitize=address)
 endif()
