Add pages artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,3 +10,6 @@ pages:
     - cmake -Bbuild -S. -DCMAKE_BUILD_TYPE=Release
     - make -C build sphinx
     - mv build/docs public
+  artifacts:
+    paths:
+      - public/
